hphp/test/zend/good/ext/reflection/tests/021.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
extension_loaded('reflection') or die('skip');
}
