hphp/test/zend/bad/ext/zlib/tests/bug67724.php.skipif
<?php
extension_loaded("zlib") or die("skip need ext/zlib");
?>